fix: made modal scrollbar be hidded

--- a/src/app.scss
+++ b/src/app.scss
@@ -158,3 +158,12 @@ input {
 input:focus {
     outline: 1px solid var(--accent-color);
 }
+
+.modal {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
